[metadata]
description = Radiomics features library for python  # 项目描述
long_description = file: README.md  # 项目详细描述从 README.md 文件中获取
long_description_content_type = text/markdown  # 详细描述的内容类型为 markdown 格式
license = 3-Clause BSD  # 许可证类型为3-Clause BSD

[options]
install_requires =  # 项目依赖的软件包列表
    numpy
    SimpleITK
    PyWavelets
    pykwalify
    six
include_package_data=False  # 不包含包数据

[options.packages.find]
include=radiomics*  # 寻找包的名称
exclude=radiomics.schemas  # 排除包含的目录

[options.package_data]
radiomics =  # 包含的数据文件
      schemas/paramSchema.yaml
      schemas/schemaFuncs.py

[versioneer]
VCS = git  # 版本控制系统为git
versionfile_source = radiomics/_version.py  # 版本文件源路径
versionfile_build = radiomics/_version.py  # 版本文件构建路径
style = pep440-post  # 版本命名风格
tag_prefix = ''  # 标签前缀为空
